--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
     <title>
-      "
+      Assinie Beach
+    </title>
+  </head>
+  
   <body>
     Hello there, awesome person! 
   </body>
