--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     Hello there, awesome person! 
     </h1>
   </body>
-
+  
+<image https://avatars.githubusercontent.com/u/94363562?v=4>
+  
 </html>
