--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <h1>
     Hello there, awesome person! 
     </h1>
+    
+   <img https://avatars.githubusercontent.com/u/94363562?v=4>
+    
   </body>
   
-<image https://avatars.githubusercontent.com/u/94363562?v=4>
+
   
 </html>
