--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Hello there, awesome person! 
     </h1>
     
-   <img src:https://avatars.githubusercontent.com/u/94363562?v=4>
+   <img src:"https://avatars.githubusercontent.com/u/94363562?v=4">
     
   </body>
   
