--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
    <img src="https://avatars.githubusercontent.com/u/94363562?v=4">
     
     <ol>
-      <li https://www.youtube.com>
-          <li https://www.larvalabs.com/cryptopunks>
-        <li https://www.cryptokitties.co>
-            <li https://fr.wikipedia.org/wiki/Elon_Musk>
+      <li <a> href= https://www.youtube.com>Youtube! </a> </li>
+  <li <a> href= https://www.larvalabs.com/cryptopunks> </a> </li>
+<li <a>href=https://www.cryptokitties.co>Kryptokitties!</a> </li>
+            <li <a> href=https://fr.wikipedia.org/wiki/Elon_Musk> </a> </li>
     </ol>
   </body>
   
