--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <ol>
       
-  <li <a href="https://github.com">GitHub</a>!</li>
+  <li> <a href="https://github.com">GitHub</a>!</li>
 
     </ol>
   </body>
